--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.3.6
   intl: ^0.18.0
+  firebase_core: ^2.14.0
 
 dev_dependencies:
   flutter_test:
