--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_riverpod: ^2.3.6
   intl: ^0.18.0
   firebase_core: ^2.14.0
+  image_picker: ^0.8.9
+  firebase_storage: ^11.2.3
+  cloud_firestore: ^4.8.1
 
 dev_dependencies:
   flutter_test:
