--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^0.8.9
   firebase_storage: ^11.2.3
   cloud_firestore: ^4.8.1
+  firebase_database: ^10.2.3
 
 dev_dependencies:
   flutter_test:
