--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_storage: ^11.2.3
   cloud_firestore: ^4.8.1
   firebase_database: ^10.2.3
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
